# python

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_chat_completion.py  web_app.py
docs/: README_OLD.md  WHISPERX_README.md  YOUTUBE_DOWNLOAD_README.md  user_flow.mmd  需求文档.md
scripts/: convert_scripts_to_traditional.py  convert_to_traditional.py  generate_flowchart.py  generate_pdf.py
src/: chat_completion.py  download_podcast.py  download_youtube_audio.py  summarize_text.py  transcribe_audio.py  translate_text.py  youtube_to_text.py
